{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 34,
  "lineage": "8698a3af-8293-b717-38a0-80676b17279c",
  "resources": [
    {
      "module": "module.instance-private",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:190441674218:instance/i-0671f9b9c539acbd6",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0671f9b9c539acbd6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "merit-iti",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a7a8f1c259c925d6",
            "private_dns": "ip-10-0-1-29.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.29",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06dce825598098d3a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0731ac23327b11e22",
            "tags": {
              "Name": " ec2-private-name-1"
            },
            "tags_all": {
              "Name": " ec2-private-name-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c51e1933f4b90bd"
            ]
          },
          "dependencies": [
            "module.instance-private.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:190441674218:instance/i-0ca513ebb33a738ea",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca513ebb33a738ea",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "merit-iti",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bbf4c5eb2432f5e8",
            "private_dns": "ip-10-0-3-80.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b35c96ef4ef9e0a7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0371f9dccf016b967",
            "tags": {
              "Name": " ec2-private-name-2"
            },
            "tags_all": {
              "Name": " ec2-private-name-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c51e1933f4b90bd"
            ]
          },
          "dependencies": [
            "module.instance-private.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.instance-public",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:190441674218:instance/i-07856662c35dbdee1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07856662c35dbdee1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "merit-iti",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bd1ace7f95c7a57e",
            "private_dns": "ip-10-0-0-204.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.204",
            "public_ip": "3.80.22.117",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b61d0a9064ab2e39",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bf71e844b312781a",
            "tags": {
              "Name": "ec2-public-name-1"
            },
            "tags_all": {
              "Name": "ec2-public-name-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c51e1933f4b90bd"
            ]
          },
          "dependencies": [
            "module.instance-private.aws_instance.my_instance_private",
            "module.instance-private.data.aws_ami.ubuntu",
            "module.instance-public.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private-loadbalancer.aws_lb.private-loadbalancer",
            "module.private-loadbalancer.aws_lb_listener.private-listener",
            "module.private-loadbalancer.aws_lb_target_group.private_target_group",
            "module.private-loadbalancer.aws_lb_target_group_attachment.target_gp_attach",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0261755bbcb8c4a84",
            "arn": "arn:aws:ec2:us-east-1:190441674218:instance/i-0d219ac17e433576d",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d219ac17e433576d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "merit-iti",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e5da651a4bbca262",
            "private_dns": "ip-10-0-2-4.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.4",
            "public_ip": "18.208.176.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aee4a2401dc0ba93",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09576f09fd43cba6d",
            "tags": {
              "Name": "ec2-public-name-2"
            },
            "tags_all": {
              "Name": "ec2-public-name-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08c51e1933f4b90bd"
            ]
          },
          "dependencies": [
            "module.instance-private.aws_instance.my_instance_private",
            "module.instance-private.data.aws_ami.ubuntu",
            "module.instance-public.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private-loadbalancer.aws_lb.private-loadbalancer",
            "module.private-loadbalancer.aws_lb_listener.private-listener",
            "module.private-loadbalancer.aws_lb_target_group.private_target_group",
            "module.private-loadbalancer.aws_lb_target_group_attachment.target_gp_attach",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190441674218:internet-gateway/igw-0a1d266b41f67042c",
            "id": "igw-0a1d266b41f67042c",
            "owner_id": "190441674218",
            "tags": {
              "Name": "my_igw"
            },
            "tags_all": {
              "Name": "my_igw"
            },
            "vpc_id": "vpc-02ce19687079525c2"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190441674218:vpc/vpc-02ce19687079525c2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-019b6716c24a3f64d",
            "default_route_table_id": "rtb-0a298f8fe6500640b",
            "default_security_group_id": "sg-07e2a13683a36a121",
            "dhcp_options_id": "dopt-07066d6e128019ed1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ce19687079525c2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a298f8fe6500640b",
            "owner_id": "190441674218",
            "tags": {
              "Name": "my_vpc"
            },
            "tags_all": {
              "Name": "my_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.private-loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "private-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:loadbalancer/app/private-loadbalancer/d808c87654cac3a8",
            "arn_suffix": "app/private-loadbalancer/d808c87654cac3a8",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-private-loadbalancer-1502701624.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:190441674218:loadbalancer/app/private-loadbalancer/d808c87654cac3a8",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "private-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08c51e1933f4b90bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0371f9dccf016b967"
              },
              {
                "subnet_id": "subnet-0731ac23327b11e22"
              }
            ],
            "subnets": [
              "subnet-0371f9dccf016b967",
              "subnet-0731ac23327b11e22"
            ],
            "vpc_id": "vpc-02ce19687079525c2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.instance-private.aws_instance.my_instance_private",
            "module.instance-private.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.private-loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "private-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:listener/app/private-loadbalancer/d808c87654cac3a8/6b05ced94d9d0300",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/private-TG/7fa40bb3ee9fbe75",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:190441674218:listener/app/private-loadbalancer/d808c87654cac3a8/6b05ced94d9d0300",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:loadbalancer/app/private-loadbalancer/d808c87654cac3a8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance-private.aws_instance.my_instance_private",
            "module.instance-private.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private-loadbalancer.aws_lb.private-loadbalancer",
            "module.private-loadbalancer.aws_lb_target_group.private_target_group",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.private-loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "private_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/private-TG/7fa40bb3ee9fbe75",
            "arn_suffix": "targetgroup/private-TG/7fa40bb3ee9fbe75",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/private-TG/7fa40bb3ee9fbe75",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "private-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02ce19687079525c2"
          },
          "dependencies": [
            "module.instance-private.aws_instance.my_instance_private",
            "module.instance-private.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.private-loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_gp_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/private-TG/7fa40bb3ee9fbe75-20230524143611978500000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/private-TG/7fa40bb3ee9fbe75",
            "target_id": "i-0671f9b9c539acbd6"
          },
          "dependencies": [
            "module.instance-private.aws_instance.my_instance_private",
            "module.instance-private.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private-loadbalancer.aws_lb_target_group.private_target_group",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/private-TG/7fa40bb3ee9fbe75-20230524143612249700000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/private-TG/7fa40bb3ee9fbe75",
            "target_id": "i-0ca513ebb33a738ea"
          },
          "dependencies": [
            "module.instance-private.aws_instance.my_instance_private",
            "module.instance-private.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private-loadbalancer.aws_lb_target_group.private_target_group",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_routs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190441674218:route-table/rtb-0eca03ea1cd9d04eb",
            "id": "rtb-0eca03ea1cd9d04eb",
            "owner_id": "190441674218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ab8c3851a2a40b97",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ce19687079525c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.public_subnets.aws_eip.nat_gw_eip",
            "module.public_subnets.aws_nat_gateway.nat_gw",
            "module.public_subnets.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074527a97416df48d",
            "route_table_id": "rtb-0eca03ea1cd9d04eb",
            "subnet_id": "subnet-0731ac23327b11e22"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private_subnets.aws_route_table.private_routs",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.public_subnets.aws_eip.nat_gw_eip",
            "module.public_subnets.aws_nat_gateway.nat_gw",
            "module.public_subnets.aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074527a97416df48d",
            "route_table_id": "rtb-0eca03ea1cd9d04eb",
            "subnet_id": "subnet-0731ac23327b11e22"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private_subnets.aws_route_table.private_routs",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.public_subnets.aws_eip.nat_gw_eip",
            "module.public_subnets.aws_nat_gateway.nat_gw",
            "module.public_subnets.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.private_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190441674218:subnet/subnet-0731ac23327b11e22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0731ac23327b11e22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190441674218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-02ce19687079525c2"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190441674218:subnet/subnet-0371f9dccf016b967",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0371f9dccf016b967",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190441674218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-02ce19687079525c2"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public-loadbalancerr",
      "mode": "managed",
      "type": "aws_lb",
      "name": "public-loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:loadbalancer/app/public-loadbalancer/c3c9e24319d8d918",
            "arn_suffix": "app/public-loadbalancer/c3c9e24319d8d918",
            "desync_mitigation_mode": "defensive",
            "dns_name": "public-loadbalancer-116233904.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:190441674218:loadbalancer/app/public-loadbalancer/c3c9e24319d8d918",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "public-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08c51e1933f4b90bd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09576f09fd43cba6d"
              },
              {
                "subnet_id": "subnet-0bf71e844b312781a"
              }
            ],
            "subnets": [
              "subnet-09576f09fd43cba6d",
              "subnet-0bf71e844b312781a"
            ],
            "tags": {
              "Name": "public-loadbalancer"
            },
            "tags_all": {
              "Name": "public-loadbalancer"
            },
            "vpc_id": "vpc-02ce19687079525c2",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.instance-private.aws_instance.my_instance_private",
            "module.instance-private.data.aws_ami.ubuntu",
            "module.instance-public.aws_instance.my_instance_public",
            "module.instance-public.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private-loadbalancer.aws_lb.private-loadbalancer",
            "module.private-loadbalancer.aws_lb_listener.private-listener",
            "module.private-loadbalancer.aws_lb_target_group.private_target_group",
            "module.private-loadbalancer.aws_lb_target_group_attachment.target_gp_attach",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.public-loadbalancerr",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:listener/app/public-loadbalancer/c3c9e24319d8d918/9cf80240975805ce",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/public-TG/fdff099f9f6cc428",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:190441674218:listener/app/public-loadbalancer/c3c9e24319d8d918/9cf80240975805ce",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:loadbalancer/app/public-loadbalancer/c3c9e24319d8d918",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.instance-private.aws_instance.my_instance_private",
            "module.instance-private.data.aws_ami.ubuntu",
            "module.instance-public.aws_instance.my_instance_public",
            "module.instance-public.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private-loadbalancer.aws_lb.private-loadbalancer",
            "module.private-loadbalancer.aws_lb_listener.private-listener",
            "module.private-loadbalancer.aws_lb_target_group.private_target_group",
            "module.private-loadbalancer.aws_lb_target_group_attachment.target_gp_attach",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.public-loadbalancerr.aws_lb.public-loadbalancer",
            "module.public-loadbalancerr.aws_lb_target_group.public_target_group",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.public-loadbalancerr",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/public-TG/fdff099f9f6cc428",
            "arn_suffix": "targetgroup/public-TG/fdff099f9f6cc428",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/public-TG/fdff099f9f6cc428",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "public-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02ce19687079525c2"
          },
          "dependencies": [
            "module.instance-private.aws_instance.my_instance_private",
            "module.instance-private.data.aws_ami.ubuntu",
            "module.instance-public.aws_instance.my_instance_public",
            "module.instance-public.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private-loadbalancer.aws_lb.private-loadbalancer",
            "module.private-loadbalancer.aws_lb_listener.private-listener",
            "module.private-loadbalancer.aws_lb_target_group.private_target_group",
            "module.private-loadbalancer.aws_lb_target_group_attachment.target_gp_attach",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.public-loadbalancerr",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_gp_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/public-TG/fdff099f9f6cc428-20230524144012759800000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/public-TG/fdff099f9f6cc428",
            "target_id": "i-07856662c35dbdee1"
          },
          "dependencies": [
            "module.instance-private.aws_instance.my_instance_private",
            "module.instance-private.data.aws_ami.ubuntu",
            "module.instance-public.aws_instance.my_instance_public",
            "module.instance-public.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private-loadbalancer.aws_lb.private-loadbalancer",
            "module.private-loadbalancer.aws_lb_listener.private-listener",
            "module.private-loadbalancer.aws_lb_target_group.private_target_group",
            "module.private-loadbalancer.aws_lb_target_group_attachment.target_gp_attach",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.public-loadbalancerr.aws_lb_target_group.public_target_group",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/public-TG/fdff099f9f6cc428-2023052414401286210000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:190441674218:targetgroup/public-TG/fdff099f9f6cc428",
            "target_id": "i-0d219ac17e433576d"
          },
          "dependencies": [
            "module.instance-private.aws_instance.my_instance_private",
            "module.instance-private.data.aws_ami.ubuntu",
            "module.instance-public.aws_instance.my_instance_public",
            "module.instance-public.data.aws_ami.ubuntu",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.private-loadbalancer.aws_lb.private-loadbalancer",
            "module.private-loadbalancer.aws_lb_listener.private-listener",
            "module.private-loadbalancer.aws_lb_target_group.private_target_group",
            "module.private-loadbalancer.aws_lb_target_group_attachment.target_gp_attach",
            "module.private_subnets.aws_subnet.private_subnets",
            "module.public-loadbalancerr.aws_lb_target_group.public_target_group",
            "module.public_subnets.aws_subnet.public_subnets",
            "module.securtity-group.aws_security_group.my_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_gw_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08189236f4b36315e",
            "domain": "vpc",
            "id": "eipalloc-08189236f4b36315e",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-173-176-9.compute-1.amazonaws.com",
            "public_ip": "54.173.176.9",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat-gateway-eip"
            },
            "tags_all": {
              "Name": "nat-gateway-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08189236f4b36315e",
            "association_id": "eipassoc-0afb4bebb09b72e51",
            "connectivity_type": "public",
            "id": "nat-0ab8c3851a2a40b97",
            "network_interface_id": "eni-00f2b3bfb656ff7e7",
            "private_ip": "10.0.0.180",
            "public_ip": "54.173.176.9",
            "subnet_id": "subnet-0bf71e844b312781a",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc",
            "module.public_subnets.aws_eip.nat_gw_eip",
            "module.public_subnets.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_routs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190441674218:route-table/rtb-0e0262b07811e6ccb",
            "id": "rtb-0e0262b07811e6ccb",
            "owner_id": "190441674218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a1d266b41f67042c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ce19687079525c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e55942fd2bb13ba2",
            "route_table_id": "rtb-0e0262b07811e6ccb",
            "subnet_id": "subnet-0bf71e844b312781a"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.public_subnets.aws_route_table.public_routs",
            "module.public_subnets.aws_subnet.public_subnets"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06377dba1a66683c2",
            "route_table_id": "rtb-0e0262b07811e6ccb",
            "subnet_id": "subnet-09576f09fd43cba6d"
          },
          "dependencies": [
            "module.my_vpc.aws_internet_gateway.my_igw",
            "module.my_vpc.aws_vpc.my_vpc",
            "module.public_subnets.aws_route_table.public_routs",
            "module.public_subnets.aws_subnet.public_subnets"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190441674218:subnet/subnet-0bf71e844b312781a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf71e844b312781a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190441674218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-02ce19687079525c2"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190441674218:subnet/subnet-09576f09fd43cba6d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09576f09fd43cba6d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190441674218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-02ce19687079525c2"
          },
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.securtity-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:190441674218:security-group/sg-08c51e1933f4b90bd",
            "description": "My security group description",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c51e1933f4b90bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-security-group20230524143531261400000001",
            "name_prefix": "my-security-group",
            "owner_id": "190441674218",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-security-group"
            },
            "tags_all": {
              "Name": "my-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ce19687079525c2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}